[gd_scene load_steps=8 format=3 uid="uid://d1rs6ncs3y4r4"]

[ext_resource type="FontFile" uid="uid://bbfeoo2kuf30n" path="res://addons/material-design-icons/fonts/material_design_icons.ttf" id="1_kyjem"]
[ext_resource type="Script" path="res://scripts/navitem.gd" id="1_pjvxn"]
[ext_resource type="Script" path="res://addons/material-design-icons/nodes/MaterialIcon.gd" id="2_7ais3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gosra"]
resource_local_to_scene = true
bg_color = Color(0.152941, 0.329412, 0.541176, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id="Animation_o1yhc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Panel:custom_minimum_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(56, 56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, 56)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, 56)]
}

[sub_resource type="Animation" id="Animation_0dais"]
resource_name = "sidebar"
length = 0.2
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(72, 56), Vector2(200, 56)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/Panel:custom_minimum_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(56, 56), Vector2(184, 56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:custom_minimum_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(72, 56), Vector2(200, 56)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(72, 56), Vector2(200, 56)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r78fu"]
_data = {
"RESET": SubResource("Animation_o1yhc"),
"sidebar": SubResource("Animation_0dais")
}

[node name="navitem" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(72, 56)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1080.0
offset_bottom = -592.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pjvxn")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(72, 56)
layout_mode = 0
offset_right = 72.0
offset_bottom = 56.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="Panel" type="Panel" parent="MarginContainer"]
clip_contents = true
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gosra")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 8.0
offset_right = 177.0
offset_bottom = 56.0
theme_override_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="MaterialIcon" type="Label" parent="MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kyjem")
theme_override_font_sizes/font_size = 40
text = "ó°‹œ"
vertical_alignment = 1
script = ExtResource("2_7ais3")
icon_name = "home"
icon_size = 40

[node name="Label" type="Label" parent="MarginContainer2/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Home"
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r78fu")
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
